--- a/mercredi/assets/css/style.css
+++ b/mercredi/assets/css/style.css
@@ -62,7 +62,9 @@ a{
 /* put hover only on li from navbar */
 li a:hover{
     color: white;
-    background-color: teal;
+    background-color: #c89446;
+    padding: 1px 15px;
+    border-radius: 5px;
 }
 
 nav{
@@ -101,4 +103,24 @@ nav ul li{
     text-align: center;
     line-height: 8vh;
     font-family: 'Jost', sans-serif;
+}
+
+/* bouton reservation - class book */
+.book{
+    text-align: center;
+    position: absolute;
+    left: 45%;
+    width: 200px;
+    font-size: 15px;
+    text-transform: uppercase;
+    margin-top: 80px;
+    background-color: teal;
+    box-shadow: 1px 1px 10px black;
+    text-shadow: 0px 0px 0px transparent;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.book:hover{
+    background-color: #c89446;
 }
